fixed right bar spacing issue

--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -199,7 +199,7 @@
 
 @media (max-width: 1024px) {
     .middle-container {
-        width: 600px;
+        width: 413px;
     }
 
     .tweet {
