--- a/src/components/rightbar/rightbar.css
+++ b/src/components/rightbar/rightbar.css
@@ -190,11 +190,22 @@
 }
 
 @media (max-width: 1024px) {
+    
     .right-container-box{
         position: sticky;
         height: 90px;
         padding: 30px 0;
         top: 0px;
-        min-width: 200px;
+    }
+
+    .search-container {
+        display: none;
+    }
+    .trend-box {
+        height: 90vh;
+        width: 284px;
+        margin-left: 25px;
+        margin-top: 1px;
+        padding-top: 1px;
     }
 }
