--- a/src/pages/page styles/explore.css
+++ b/src/pages/page styles/explore.css
@@ -52,3 +52,10 @@
 .explore-base h3 {
     font-size: 900;
 }
+
+@media (max-width: 1024px) {
+  .explore-search__input-container {
+    width: 290px;
+    padding: 12px;
+  }
+}
